# topiary

./: LICENSE  README.rst  pyproject.toml  setup.py
tests/project1/: project1_module.py  pyproject.toml
topiary/: __init__.py  __main__.py  cli.py
