[tool.poetry]
name = "project1"
version = "0.1.0"
description = "Fake project for unit tests"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
requests = "^2.26.0"
numpy = "^1.21.4"
pandas = "^1.3.5"
Twisted = "^21.7.0"
Django = "^4.0"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
